ecmascript/parser/tests/test262-error-references/fail/d0f4c42dcbc9d139.js.stderr
error: Expected a decimal digit
 --> $DIR/tests/test262-parser/fail/d0f4c42dcbc9d139.js:1:4
  |
1 | 3e+
  |    ^

